--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "format": "prettier --write .",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
@@ -15,12 +16,17 @@
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@tailwindcss/vite": "^4.0.9",
+    "@tanstack/react-query": "^5.83.0",
     "antd": "^4.24.6",
     "axios": "^1.8.3",
+    "framer-motion": "^12.23.6",
     "jwt-decode": "^4.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-error-boundary": "^6.0.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.2.0",
+    "socket.io-client": "^4.8.1",
     "tailwindcss": "^4.0.9"
   },
   "devDependencies": {
@@ -29,9 +35,12 @@
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react-swc": "^3.8.0",
     "eslint": "^9.21.0",
+    "eslint-config-prettier": "^10.1.5",
+    "eslint-plugin-prettier": "^5.5.1",
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.15.0",
+    "prettier": "3.6.2",
     "vite": "^6.2.0"
   }
 }
